force-app/main/default/objects/User/fields/voicenter_extension__c.field-meta.xml
<CustomField>
    <fullName>voicenter_extension__c</fullName>
    <externalId>true</externalId>
    <label>Voicenter Extension SIP User</label>
    <length>8</length>
    <type>Text</type>
</CustomField>