force-app/main/default/objects/User/fields/VoicenterOrgCode__c.field-meta.xml
<CustomField>
    <fullName>VoicenterOrgCode__c</fullName>
    <externalId>true</externalId>
    <label>Voicenter User Login Code</label>
    <length>45</length>
    <type>Text</type>
</CustomField>