force-app/main/default/objects/User/fields/VoicenterUserCode__c.field-meta.xml
<CustomField>
    <fullName>VoicenterUserCode__c</fullName>
    <externalId>true</externalId>
    <label>Voicenter API User Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>